Update & run docs:i18n script

--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -100,7 +100,7 @@
     "/components/autocomplete": "Autocomplete",
     "/components/avatars": "Avatars",
     "/components/badges": "Badges",
-    "/components/basic-inputs": "Basic inputs",
+    "/components/basic-inputs": "Basic Inputs",
     "/components/bottom-navigation": "Bottom Navigation",
     "/components/box": "Box",
     "/components/breadcrumbs": "Breadcrumbs",
@@ -173,15 +173,15 @@
     "/customization/typography": "Typography",
     "/customization/spacing": "Spacing",
     "/customization/z-index": "z-index",
-    "/customization/component-overrides": "Component overrides",
-    "/customization/overrides": "Components",
+    "/customization/component-overrides": "Component Overrides",
+    "/customization/overrides": "Overrides",
     "/customization/default-theme": "Default Theme",
     "/guides": "Guides",
     "/guides/typescript": "TypeScript",
     "/guides/interoperability": "Style Library Interoperability",
     "/guides/minimizing-bundle-size": "Minimizing Bundle Size",
     "/guides/composition": "Composition",
-    "/guides/responsive-ui": "Responsive-UI",
+    "/guides/responsive-ui": "Responsive UI",
     "/guides/server-rendering": "Server Rendering",
     "/guides/migration-v3": "Migration From v3",
     "/guides/migration-v0x": "Migration From v0.x",
@@ -200,6 +200,15 @@
     "/discover-more/changelog": "Changelog",
     "/discover-more/governance": "Governance",
     "/versions": "Versions",
-    "/discover-more/languages": "Languages"
+    "/discover-more/languages": "Languages",
+    "/components/checkboxes": "Checkboxes",
+    "/components/radio-buttons": "Radio Buttons",
+    "/components/switches": "Switches",
+    "/components/about-the-lab": "About The Lab",
+    "/styles": "Styles",
+    "/styles/basics": "Basics",
+    "/styles/advanced": "Advanced",
+    "/components/lab": "Lab",
+    "/customization/theme": "Theme"
   }
 }
