--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -64,6 +64,8 @@
   "codesandbox": "Edit in CodeSandbox",
   "seeMore": "See more",
   "copySource": "Copy the source",
+  "copySourceLinkJS": "Copy link to JavaScript source",
+  "copySourceLinkTS": "Copy link to TypeScript source",
   "stackblitz": "Edit in StackBlitz (JS only)",
   "headTitle": "The world's most popular React UI framework - Material-UI",
   "pages": {
@@ -196,7 +198,5 @@
     "/styles/basics": "Basics",
     "/styles/advanced": "Advanced",
     "https://themes.material-ui.com/": "Premium Themes"
-  },
-  "copySourceLinkJS": "Copy link to JavaScript source",
-  "copySourceLinkTS": "Copy link to TypeScript source"
+  }
 }
