--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -72,7 +72,7 @@
   "emoojiWarning": "Warning",
   "mainNavigation": "Main navigation",
   "skipToContent": "Skip to content",
-  "openDrawer": "Open drawer",
+  "openDrawer": "Open main navigation",
   "changeLanguage": "Change language",
   "pageTOC": "Page table of contents",
   "showJSSource": "Show JavaScript source",
