Pickers -> Date/Time inputs

--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -128,7 +128,7 @@
     "/components/no-ssr": "No SSR",
     "/components/other": "Other",
     "/components/paper": "Paper",
-    "/components/pickers": "Pickers",
+    "/components/pickers": "Date/Time",
     "/components/popover": "Popover",
     "/components/popper": "Popper",
     "/components/portal": "Portal",
