Material-UI: A React UI component framework

--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -66,7 +66,7 @@
   "copySourceLinkJS": "Copy link to JavaScript source",
   "copySourceLinkTS": "Copy link to TypeScript source",
   "stackblitz": "Edit in StackBlitz (JS only)",
-  "headTitle": "The world's second most popular React UI framework - Material-UI",
+  "headTitle": "Material-UI: A React UI component framework",
   "emojiLove": "Love",
   "emoojiWarning": "Warning",
   "mainNavigation": "Main navigation",
