--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -66,7 +66,8 @@
   "copySourceLinkJS": "Copy link to JavaScript source",
   "copySourceLinkTS": "Copy link to TypeScript source",
   "stackblitz": "Edit in StackBlitz (JS only)",
-  "headTitle": "Material-UI: A React UI component framework",
+  "headTitle": "Material-UI: A popular React UI component framework",
+  "headDescription": "Don't reinvent the wheel. React components for faster and easier web development. Build your own design system, or start with Material Design.",
   "emojiLove": "Love",
   "emoojiWarning": "Warning",
   "mainNavigation": "Main navigation",
