--- a/.github/ISSUE_TEMPLATE/2.bug.md
+++ b/.github/ISSUE_TEMPLATE/2.bug.md
@@ -12,7 +12,7 @@ about: Create a bug report for Material-UI.
 
 <!-- Checked checkbox should look like this: [x] -->
 
-- [ ] This is not a v0.x issue. <!-- (v0.x is no longer maintained) -->
+- [ ] The issue is present in the latest release.
 - [ ] I have searched the [issues](https://github.com/mui-org/material-ui/issues) of this repository and believe that this is not a duplicate.
 
 ## Current Behavior 😯
@@ -41,9 +41,9 @@ about: Create a bug report for Material-UI.
 Steps:
 
 1.
-1.
-1.
-1.
+2.
+3.
+4.
 
 ## Context 🔦
 
