--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -28,8 +28,8 @@
   "team": " Team",
   "homeFooterRelease": "Currently {{versionNumber}}. Released under the {{license}}.",
   "license": "MIT License",
-  "likeMui": "Like Material-UI?",
-  "adblock": "If you don't mind tech-related ads, and want to support Open Source, please whitelist Material-UI in your ad blocker.",
+  "likeMui": "Help us keep running",
+  "adblock": "If you don't mind tech related ads (no tracking or remarketing), and want to keep us running, whitelist Material-UI in your blocker.",
   "thanks": "Thank you!",
   "editPage": "Edit this page",
   "tableOfContents": "Contents",
