--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -172,7 +172,7 @@
     "/system/spacing": "Spacing",
     "/system/typography": "Typography",
     "/customization": "Customization",
-    "/customization/theme": "Theme",
+    "/customization/theming": "Theming",
     "/customization/breakpoints": "Breakpoints",
     "/customization/color": "Color",
     "/customization/themes": "Overview",
