--- a/docs/translations/api-docs/tab-scroll-button/tab-scroll-button.json
+++ b/docs/translations/api-docs/tab-scroll-button/tab-scroll-button.json
@@ -3,6 +3,7 @@
   "propDescriptions": {
     "children": "The content of the component.",
     "classes": "Override or extend the styles applied to the component. See <a href=\"#css\">CSS API</a> below for more details.",
+    "components": "The components used for ScrollButtonStart, ScrollButtonEnd item type",
     "direction": "The direction the button should indicate.",
     "disabled": "If <code>true</code>, the component is disabled.",
     "orientation": "The component orientation (layout flow direction).",
