remove 301 in doc

--- a/docs/pages/blog/2021.md
+++ b/docs/pages/blog/2021.md
@@ -77,7 +77,7 @@ We have achieved most of what we could have hoped for.
 
   - [Masonry](/material-ui/react-masonry/)
   - [Stack](/material-ui/react-stack/)
-  - [Trap Focus](/base/react-trap-focus/)
+  - [Trap Focus](/base/react-focus-trap/)
   - [Unstyled Button](/base/react-button/)
   - [Unstyled Slider](/base/react-slider/)
   - [Unstyled Modal](/base/react-modal/)
