--- a/docs/translations/translations-pt.json
+++ b/docs/translations/translations-pt.json
@@ -27,7 +27,7 @@
     "styleOverrides": "The name <code>{{componentStyles.name}}</code> can be used when providing <a href=\"/material-ui/customization/theme-components/#default-props\">default props</a> or <a href=\"/material-ui/customization/theme-components/#global-style-overrides\">style overrides</a> in the theme.",
     "type": "Tipo"
   },
-  "albumDescr": "Um álbum responsivo / o leiaute da galeria com ações e um rodapé na página.",
+  "albumDescr": "Um álbum responsivo / o layout da galeria com ações e um rodapé na página.",
   "albumTitle": "Álbum",
   "algoliaSearch": "Buscar",
   "appFrame": {
@@ -38,14 +38,14 @@
     "skipToContent": "Pular para o conteúdo",
     "toggleSettings": "Alternar drawer de configurações"
   },
-  "backToTop": "Scroll back to top",
-  "blogDescr": "Um leiaute de página de blog sofisticado. O suporte do markdown é cortesia do markdown-to-jsx, mas pode ser facilmente substituído.",
+  "backToTop": "Voltar para o topo",
+  "blogDescr": "Um layout de página de blog sofisticado. O suporte do markdown é cortesia do markdown-to-jsx, mas pode ser facilmente substituído.",
   "blogTitle": "Blog",
   "bundleSize": "Tamanho do pacote",
   "bundleSizeTooltip": "Role para baixo até 'Análise de Exportação' para um relatório mais detalhado.",
   "cancel": "Cancelar",
   "cdn": "ou use uma CDN.",
-  "checkoutDescr": "Um leiaute de etapas de página de checkout. Adapte o número de etapas para atender às suas necessidades ou torne as etapas opcionais.",
+  "checkoutDescr": "Um layout de etapas de página de checkout. Adapte o número de etapas para atender às suas necessidades ou torne as etapas opcionais.",
   "checkoutTitle": "Checkout",
   "clickToCopy": "Clique para copiar",
   "close": "Fechar",
@@ -99,7 +99,7 @@
   "pageTOC": "Tabela de conteúdo",
   "praise": "Elogios para MUI",
   "praiseDescr": "Veja o que alguns dos nossos usuários estão dizendo.",
-  "pricingDescr": "Crie rapidamente uma tabela de preços eficaz para seus clientes em potencial com este leiaute de página.",
+  "pricingDescr": "Crie rapidamente uma tabela de preços eficaz para seus clientes em potencial com este layout de página.",
   "pricingTitle": "Preço",
   "resetDemo": "Reiniciar demonstração",
   "resetDensity": "Repor densidade",
@@ -160,13 +160,13 @@
   "visit": "Acesse o site",
   "whosUsing": "Quem está usando MUI?",
   "pages": {
-    "/system/getting-started": "Getting started",
-    "/system/getting-started/overview": "Overview",
-    "/system/getting-started/installation": "Installation",
-    "/system/getting-started/usage": "Usage",
-    "/system/getting-started/the-sx-prop": "The sx prop",
-    "/system/getting-started/custom-components": "Custom components",
-    "/style-utilities": "Style utilities",
+    "/system/getting-started": "Iniciando",
+    "/system/getting-started/overview": "Visão geral",
+    "/system/getting-started/installation": "Instalação",
+    "/system/getting-started/usage": "Uso",
+    "/system/getting-started/the-sx-prop": "O sx prop",
+    "/system/getting-started/custom-components": "Componentes personalizados",
+    "/style-utilities": "Estilos utilitários",
     "/system/properties": "Propriedades",
     "/system/borders": "Bordas",
     "/system/display": "Exibição",
@@ -180,83 +180,83 @@
     "/system/screen-readers": "Screen readers",
     "/system/typography": "Tipografia",
     "/system/styled": "styled",
-    "/system/react-": "Components",
+    "/system/react-": "Componentes",
     "/system/react-box": "Box",
     "/system/react-container": "Container",
     "/system/react-grid": "Grid",
     "/system/react-stack": "Stack",
-    "/system/styles": "Styles",
-    "/system/styles/basics": "Basics",
-    "/system/styles/advanced": "Advanced",
-    "/base/getting-started": "Getting started",
-    "/base/getting-started/overview": "Overview",
-    "/base/getting-started/installation": "Installation",
-    "/base/getting-started/usage": "Usage",
-    "/base/getting-started/customization": "Customization",
-    "/base/react-": "Components",
+    "/system/styles": "Estilos",
+    "/system/styles/basics": "Básicos",
+    "/system/styles/advanced": "Avançados",
+    "/base/getting-started": "Iniciando",
+    "/base/getting-started/overview": "Visão geral",
+    "/base/getting-started/installation": "Instalação",
+    "/base/getting-started/usage": "Uso",
+    "/base/getting-started/customization": "Costumização",
+    "/base/react-": "Componentes",
     "inputs": "Inputs",
-    "/base/react-button": "Button",
+    "/base/react-button": "Botão",
     "/base/react-input": "Input",
     "/base/react-select": "Select",
     "/base/react-slider": "Slider",
     "/base/react-switch": "Switch",
     "data-display": "Data display",
     "/base/react-badge": "Badge",
-    "navigation": "Navigation",
+    "navigation": "Navegação",
     "/base/react-menu": "Menu",
-    "/base/react-table-pagination": "Table pagination",
-    "/base/react-tabs": "Tabs",
-    "utils": "Utils",
+    "/base/react-table-pagination": "Paginação de tabela",
+    "/base/react-tabs": "Abas",
+    "utils": "Utilitários",
     "/base/react-click-away-listener": "Click-away listener",
-    "/base/react-form-control": "Form control",
+    "/base/react-form-control": "Controle de formulário",
     "/base/react-modal": "Modal",
     "/base/react-no-ssr": "No SSR",
     "/base/react-popper": "Popper",
     "/base/react-portal": "Portal",
     "/base/react-textarea-autosize": "Textarea autosize",
     "/base/react-focus-trap": "Focus trap",
-    "/base/guides": "How To Guides",
-    "/base/guides/working-with-tailwind-css": "Working with Tailwind CSS",
-    "/material-ui/getting-started": "Getting started",
-    "/material-ui/getting-started/overview": "Overview",
-    "/material-ui/getting-started/installation": "Installation",
-    "/material-ui/getting-started/usage": "Usage",
-    "/material-ui/getting-started/example-projects": "Example projects",
+    "/base/guides": "Guias",
+    "/base/guides/working-with-tailwind-css": "Trabalhando com Tailwind CSS",
+    "/material-ui/getting-started": "Iniciando",
+    "/material-ui/getting-started/overview": "Visão geral",
+    "/material-ui/getting-started/installation": "Instalação",
+    "/material-ui/getting-started/usage": "Uso",
+    "/material-ui/getting-started/example-projects": "Projetos de exemplo",
     "/material-ui/getting-started/templates": "Templates",
-    "/material-ui/getting-started/learn": "Learn",
+    "/material-ui/getting-started/learn": "Recursos de Aprendizagem",
     "/material-ui/getting-started/faq": "FAQs",
     "/material-ui/getting-started/supported-components": "Componentes Suportados",
-    "/material-ui/getting-started/supported-platforms": "Supported platforms",
-    "/material-ui/getting-started/support": "Support",
-    "/material-ui/react-": "Components",
+    "/material-ui/getting-started/supported-platforms": "Plataformas compatíveis",
+    "/material-ui/getting-started/support": "Suporte",
+    "/material-ui/react-": "Componentes",
     "/material-ui/react-autocomplete": "Autocomplete",
-    "/material-ui/react-button": "Button",
-    "/material-ui/react-button-group": "Button group",
+    "/material-ui/react-button": "Botão",
+    "/material-ui/react-button-group": "Grupo de botões",
     "/material-ui/react-checkbox": "Checkbox",
-    "/material-ui/react-floating-action-button": "Floating action button",
-    "/material-ui/react-radio-button": "Radio button",
-    "/material-ui/react-rating": "Rating",
+    "/material-ui/react-floating-action-button": "Botão de ação flutuante",
+    "/material-ui/react-radio-button": "Radio botão",
+    "/material-ui/react-rating": "Avaliação",
     "/material-ui/react-select": "Select",
     "/material-ui/react-slider": "Slider",
     "/material-ui/react-switch": "Switch",
-    "/material-ui/react-text-field": "Text field",
-    "/material-ui/react-transfer-list": "Transfer list",
-    "/material-ui/react-toggle-button": "Toggle button",
+    "/material-ui/react-text-field": "Campo de texto",
+    "/material-ui/react-transfer-list": "Lista de transferência",
+    "/material-ui/react-toggle-button": "Botão de alternância",
     "/material-ui/react-avatar": "Avatar",
     "/material-ui/react-badge": "Badge",
     "/material-ui/react-chip": "Chip",
-    "/material-ui/react-divider": "Divider",
-    "/material-ui/icons": "Icons",
-    "/material-ui/material-icons": "Material Icons",
-    "/material-ui/react-list": "List",
-    "/material-ui/react-table": "Table",
+    "/material-ui/react-divider": "Divisor",
+    "/material-ui/icons": "Ícones",
+    "/material-ui/material-icons": "Material Ícones",
+    "/material-ui/react-list": "Lista",
+    "/material-ui/react-table": "Tabela",
     "/material-ui/react-tooltip": "Tooltip",
-    "/material-ui/react-typography": "Typography",
+    "/material-ui/react-typography": "Tipografia",
     "feedback": "Feedback",
-    "/material-ui/react-alert": "Alert",
+    "/material-ui/react-alert": "Alerta",
     "/material-ui/react-backdrop": "Backdrop",
-    "/material-ui/react-dialog": "Dialog",
-    "/material-ui/react-progress": "Progress",
+    "/material-ui/react-dialog": "Diálogo",
+    "/material-ui/react-progress": "Progresso",
     "/material-ui/react-skeleton": "Skeleton",
     "/material-ui/react-snackbar": "Snackbar",
     "surfaces": "Surfaces",
@@ -269,10 +269,10 @@
     "/material-ui/react-drawer": "Drawer",
     "/material-ui/react-link": "Link",
     "/material-ui/react-menu": "Menu",
-    "/material-ui/react-pagination": "Pagination",
+    "/material-ui/react-pagination": "Paginação",
     "/material-ui/react-speed-dial": "Speed dial",
     "/material-ui/react-stepper": "Stepper",
-    "/material-ui/react-tabs": "Tabs",
+    "/material-ui/react-tabs": "Abas",
     "layout": "Layout",
     "/material-ui/react-box": "Box",
     "/material-ui/react-container": "Container",
@@ -293,26 +293,26 @@
     "/material-ui/react-use-media-query": "useMediaQuery",
     "MUI X": "MUI X",
     "lab": "Lab",
-    "/material-ui/about-the-lab": "About the lab 🧪",
+    "/material-ui/about-the-lab": "Em laboratório 🧪",
     "/material-ui/react-masonry": "Masonry",
-    "/material-ui/react-timeline": "Timeline",
+    "/material-ui/react-timeline": "Linha do tempo",
     "/material-ui/react-tree-view": "Tree view",
-    "/material-ui/customization": "Customization",
+    "/material-ui/customization": "Costumização",
     "/material-ui/customization/theme": "Theme",
     "/material-ui/customization/theming": "Theming",
     "/material-ui/customization/palette": "Palette",
     "/material-ui/customization/dark-mode": "Dark mode",
-    "/material-ui/customization/typography": "Typography",
+    "/material-ui/customization/typography": "Tipografia",
     "/material-ui/customization/spacing": "Spacing",
     "/material-ui/customization/breakpoints": "Breakpoints",
     "/material-ui/customization/density": "Density",
     "/material-ui/customization/z-index": "z-index",
-    "/material-ui/customization/transitions": "Transitions",
-    "/material-ui/customization/theme-components": "Components",
-    "/material-ui/customization/default-theme": "Default Theme",
-    "/material-ui/customization/how-to-customize": "How to customize",
-    "/material-ui/customization/color": "Color",
-    "/material-ui/guides": "How To Guides",
+    "/material-ui/customization/transitions": "Transições",
+    "/material-ui/customization/theme-components": "Componentes",
+    "/material-ui/customization/default-theme": "Tema Padrão",
+    "/material-ui/customization/how-to-customize": "Como personalizar",
+    "/material-ui/customization/color": "Cor",
+    "/material-ui/guides": "Guias",
     "/material-ui/guides/understand-mui-packages": "Understand MUI packages",
     "/material-ui/guides/typescript": "TypeScript",
     "/material-ui/guides/interoperability": "Style library interoperability",
@@ -321,8 +321,8 @@
     "/material-ui/guides/composition": "Composition",
     "/material-ui/guides/routing": "Routing",
     "/material-ui/guides/server-rendering": "Server rendering",
-    "/material-ui/guides/responsive-ui": "Responsive UI",
-    "/material-ui/guides/pickers-migration": "Migration from @material-ui/pickers",
+    "/material-ui/guides/responsive-ui": "Responsivo UI",
+    "/material-ui/guides/pickers-migration": "Migração de @material-ui/pickers",
     "/material-ui/guides/testing": "Testing",
     "/material-ui/guides/localization": "Localization",
     "/material-ui/guides/content-security-policy": "Content Security Policy",
@@ -330,28 +330,28 @@
     "/material-ui/guides/flow": "Flow",
     "/material-ui/guides/shadow-dom": "Shadow DOM",
     "/material-ui/experimental-api": "Experimental APIs",
-    "/material-ui/experimental-api/classname-generator": "ClassName generator",
-    "/material-ui/experimental-api/css-variables": "CSS variables",
-    "/material-ui/discover-more": "Discover more",
+    "/material-ui/experimental-api/classname-generator": "ClassName gerador",
+    "/material-ui/experimental-api/css-variables": "CSS variáveis",
+    "/material-ui/discover-more": "Descubra mais",
     "/material-ui/discover-more/showcase": "Showcase",
-    "/material-ui/discover-more/related-projects": "Related projects",
+    "/material-ui/discover-more/related-projects": "Projetos relacionados",
     "/material-ui/discover-more/design-kits": "Design kits",
     "/material-ui/discover-more/roadmap": "Roadmap",
-    "/material-ui/discover-more/backers": "Sponsors & Backers",
+    "/material-ui/discover-more/backers": "Patrocinadores e apoiadores",
     "/material-ui/discover-more/vision": "Vision",
     "/material-ui/discover-more/changelog": "Changelog",
     "/material-ui/discover-more/languages": "Languages",
-    "/material-ui/migration": "Migration",
-    "/material-ui/migration/migration-grid-v2": "Migrating to Grid v2",
-    "Upgrade to v5": "Upgrade to v5",
-    "/material-ui/migration/migration-v4": "Migrating to v5: getting started",
-    "/material-ui/migration/v5-style-changes": "Breaking changes: style and theme",
-    "/material-ui/migration/v5-component-changes": "Breaking changes: components",
-    "/material-ui/migration/migrating-from-jss": "Migrating from JSS (optional)",
+    "/material-ui/migration": "Migração",
+    "/material-ui/migration/migration-grid-v2": "Migrando para o Grid v2",
+    "Upgrade to v5": "Atualizar para v5",
+    "/material-ui/migration/migration-v4": "Migrando para v5: primeiros passos",
+    "/material-ui/migration/v5-style-changes": "Breaking changes: estilo e tema",
+    "/material-ui/migration/v5-component-changes": "Breaking changes: componentes",
+    "/material-ui/migration/migrating-from-jss": "Migrando do JSS (opcional)",
     "/material-ui/migration/troubleshooting": "Troubleshooting",
-    "Earlier versions": "Earlier versions",
-    "/material-ui/migration/migration-v3": "Migration from v3 to v4",
-    "/material-ui/migration/migration-v0x": "Migration from v0.x to v1",
+    "Earlier versions": "Versões recentes",
+    "/material-ui/migration/migration-v3": "Migração da v3 para v4",
+    "/material-ui/migration/migration-v0x": "Migração da v0.x para v1",
     "https://mui.com/store/?utm_source=docs&utm_medium=referral&utm_campaign=sidenav": "Templates"
   }
 }
