--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -66,6 +66,9 @@
   "emoojiWarning": "Warning",
   "expandAll": "Expand all",
   "feedbackCommentLabel": "Comment",
+  "feedbackSectionLabel": "Section concerned by the comment",
+  "feedbackSectionPlaceholder": "Comment about the section ...",
+  "feedbackNoSectionSelected": "The all page",
   "feedbackFailed": "Couldn't submit feedback. Please try again later.",
   "feedbackMessage": "Was this page helpful?",
   "feedbackMessageDown": "Please let us know what we could do to improve this page.",
