--- a/docs/translations/api-docs/option-group-unstyled/option-group-unstyled.json
+++ b/docs/translations/api-docs/option-group-unstyled/option-group-unstyled.json
@@ -2,10 +2,10 @@
   "componentDescription": "An unstyled option group to be used within a SelectUnstyled.",
   "propDescriptions": {
     "component": "The component used for the root node. Either a string to use a HTML element or a component.",
-    "components": "The components used for each slot inside the OptionGroupUnstyled. Either a string to use a HTML element or a component.",
-    "componentsProps": "The props used for each slot inside the Input.",
     "disabled": "If <code>true</code> all the options in the group will be disabled.",
-    "label": "The human-readable description of the group."
+    "label": "The human-readable description of the group.",
+    "slotProps": "The props used for each slot inside the Input.",
+    "slots": "The components used for each slot inside the OptionGroupUnstyled. Either a string to use a HTML element or a component."
   },
   "classDescriptions": {}
 }
