--- a/docs/translations/api-docs/accordion/accordion-pt.json
+++ b/docs/translations/api-docs/accordion/accordion-pt.json
@@ -10,7 +10,7 @@
     "onChange": "Callback acionado quando o estado expandido/comprimido é alterado.<br><br><strong>Assinatura:</strong><br><code>function(event: object, expanded: boolean) =&gt; void</code><br><em>evento:</em> A fonte do evento de callback. <strong>Atenção</strong>: Este evento é genérico e não um evento de mudança.<br><em>expandido:</em> O estado <code>expandido</code> do acordeão.",
     "square": "Se <code>true</code>, cantos arredondados são desabilitados.",
     "sx": "Prop que permite sobrescrever estilos CSS adicionais. Veja a <a href=\"/system/getting-started/the-sx-prop/\">`sx` page</a> para mais detalhes.",
-    "TransitionComponent": "Componente usado para a transição. <a href=\"/material-ui/transitions/#transitioncomponent-prop\">Siga este guia</a> para aprender mais sobre os requisitos do componente.",
+    "TransitionComponent": "The component used for the transition. <a href=\"/material-ui/transitions/#transitioncomponent-prop\">Follow this guide</a> to learn more about the requirements for this component.",
     "TransitionProps": "Propriedades aplicadas ao elemento de transição. Por padrão, o elemento é baseado neste componente <a href=\"http://reactcommunity.org/react-transition-group/transition\"><code>Transition</code></a>."
   },
   "classDescriptions": {
