--- a/docs/translations/api-docs/list-item/list-item.json
+++ b/docs/translations/api-docs/list-item/list-item.json
@@ -18,6 +18,8 @@
     "divider": "If <code>true</code>, a 1px light border is added to the bottom of the list item.",
     "secondaryAction": "The element to display at the end of ListItem.",
     "selected": "Use to apply selected styling.",
+    "slotProps": "The props used for each slot inside the Input.",
+    "slots": "The components used for each slot inside the InputBase. Either a string to use a HTML element or a component.",
     "sx": "The system prop that allows defining system overrides as well as additional CSS styles. See the <a href=\"/system/getting-started/the-sx-prop/\">`sx` page</a> for more details."
   },
   "classDescriptions": {
