--- a/docs/translations/api-docs/pagination-item/pagination-item.json
+++ b/docs/translations/api-docs/pagination-item/pagination-item.json
@@ -10,6 +10,7 @@
     "selected": "If <code>true</code> the pagination item is selected.",
     "shape": "The shape of the pagination item.",
     "size": "The size of the component.",
+    "slots": "The components used for each slot inside the PaginationItem. Either a string to use a HTML element or a component.",
     "sx": "The system prop that allows defining system overrides as well as additional CSS styles. See the <a href=\"/system/getting-started/the-sx-prop/\">`sx` page</a> for more details.",
     "type": "The type of pagination item.",
     "variant": "The variant to use."
