--- a/docs/translations/api-docs/tooltip/tooltip.json
+++ b/docs/translations/api-docs/tooltip/tooltip.json
@@ -24,6 +24,8 @@
     "placement": "Tooltip placement.",
     "PopperComponent": "The component used for the popper.",
     "PopperProps": "Props applied to the <a href=\"/material-ui/api/popper/\"><code>Popper</code></a> element.",
+    "slotProps": "The props used for each slot inside the Tooltip. Note that <code>componentsProps.popper</code> prop values win over <code>PopperProps</code> and <code>componentsProps.transition</code> prop values win over <code>TransitionProps</code> if both are applied.",
+    "slots": "The components used for each slot inside the Tooltip. Either a string to use a HTML element or a component.",
     "sx": "The system prop that allows defining system overrides as well as additional CSS styles. See the <a href=\"/system/getting-started/the-sx-prop/\">`sx` page</a> for more details.",
     "title": "Tooltip title. Zero-length titles string, undefined, null and false are never displayed.",
     "TransitionComponent": "The component used for the transition. <a href=\"/material-ui/transitions/#transitioncomponent-prop\">Follow this guide</a> to learn more about the requirements for this component.",
