--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -266,7 +266,7 @@
     "/material-ui/react-app-bar": "App Bar",
     "/material-ui/react-card": "Card",
     "/material-ui/react-paper": "Paper",
-    "/material-ui/react-bottom-navigation": "Button Navigation",
+    "/material-ui/react-bottom-navigation": "Bottom Navigation",
     "/material-ui/react-breadcrumbs": "Breadcrumbs",
     "/material-ui/react-drawer": "Drawer",
     "/material-ui/react-link": "Link",
