--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -66,13 +66,10 @@
   "emoojiWarning": "Warning",
   "expandAll": "Expand all",
   "feedbackCommentLabel": "Comment",
-  "feedbackSectionLabel": "Section concerned by the comment",
-  "feedbackSectionPlaceholder": "Comment about the section ...",
-  "feedbackNoSectionSelected": "The all page",
   "feedbackFailed": "Couldn't submit feedback. Please try again later.",
   "feedbackMessage": "Was this page helpful?",
-  "feedbackMessageDown": "Please let us know what we could do to improve this page.",
-  "feedbackMessageUp": "Please let us know what we should keep doing more of.",
+  "feedbackMessageDown": "Please let us know what we could do to improve this page (optional)",
+  "feedbackMessageUp": "Please let us know what we should keep doing more of (optional)",
   "feedbackNo": "No",
   "feedbackSubmitted": "Feedback submitted",
   "feedbackYes": "Yes",
