--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -70,6 +70,10 @@
   "feedbackMessage": "Was this page helpful?",
   "feedbackMessageDown": "Please let us know what we could do to improve this page (optional)",
   "feedbackMessageUp": "Please let us know what we should keep doing more of (optional)",
+  "feedbackMessageToGithub": {
+    "main": "If you need an reply, or want to follow progress on the topic, please",
+    "link": "open an issue"
+  },
   "feedbackNo": "No",
   "feedbackSubmitted": "Feedback submitted",
   "feedbackYes": "Yes",
