--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -68,11 +68,11 @@
   "feedbackCommentLabel": "Comment",
   "feedbackFailed": "Couldn't submit feedback. Please try again later.",
   "feedbackMessage": "Was this page helpful?",
-  "feedbackMessageDown": "Please let us know what we could do to improve this page (optional)",
+  "feedbackMessageDown": "How can we improve this page? (optional)",
   "feedbackMessageUp": "Please let us know what we should keep doing more of (optional)",
   "feedbackMessageToGithub": {
-    "main": "If you need an reply, or want to follow progress on the topic, please",
-    "link": "open an issue"
+    "main": "Is something broken? Do you need a reply to a problem you've encountered? Please",
+    "link": "open an issue."
   },
   "feedbackNo": "No",
   "feedbackSubmitted": "Feedback submitted",
