--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -219,6 +219,7 @@
     "/base/react-textarea-autosize": "Textarea Autosize",
     "/base/guides": "How To Guides",
     "/base/guides/working-with-tailwind-css": "Working with Tailwind CSS",
+    "/base/guides/overriding-component-structure": "Overriding component structure",
     "/material-ui/getting-started": "Getting started",
     "/material-ui/getting-started/overview": "Overview",
     "/material-ui/getting-started/installation": "Installation",
