--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -71,9 +71,13 @@
   "feedbackMessage": "Was this page helpful?",
   "feedbackMessageDown": "How can we improve this page? (optional)",
   "feedbackMessageUp": "What did you like about this page? (optional)",
+  "feedbackSectionSpecific": "How can we improve the <strong>{{sectionName}}</strong> section? (optional)",
   "feedbackMessageToGithub": {
-    "main": "Is something broken? Do you need a reply to a problem you've encountered? Please",
-    "link": "open an issue."
+    "usecases": "Is something broken? Do you need a reply to a problem you've encountered?",
+    "callToAction": {
+      "text": "Please ",
+      "link": "open an issue."
+    }
   },
   "feedbackNo": "No",
   "feedbackSubmitted": "Feedback submitted",
