--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -334,6 +334,7 @@
     "/material-ui/guides/shadow-dom": "Shadow DOM",
     "/material-ui/experimental-api": "Experimental APIs",
     "/material-ui/experimental-api/classname-generator": "ClassName generator",
+    "/material-ui/experimental-api/css-variables": "CSS variables",
     "CSS theme variables": "CSS theme variables",
     "/material-ui/experimental-api/css-theme-variables/overview": "Overview",
     "/material-ui/experimental-api/css-theme-variables/usage": "Usage",
