--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -72,7 +72,7 @@
   "feedbackMessageDown": "How can we improve this page? (optional)",
   "feedbackMessageUp": "What did you like about this page? (optional)",
   "feedbackSectionSpecific": "How can we improve the <strong>{{sectionName}}</strong> section? (optional)",
-  "feedbackMessageToGithub": {
+  "feedbackMessageToGitHub": {
     "usecases": "Is something broken? Do you need a reply to a problem you've encountered?",
     "callToAction": {
       "text": "Please ",
