--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -186,6 +186,8 @@
     "/system/react-container": "Container",
     "/system/react-grid": "Grid",
     "/system/react-stack": "Stack",
+    "/system/experimental-api": "Experimental APIs",
+    "/system/experimental-api/extend-sx-prop": "Extend the `sx` prop",
     "/system/styles": "Styles",
     "/system/styles/basics": "Basics",
     "/system/styles/advanced": "Advanced",
