--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -345,7 +345,8 @@
     "/material-ui/experimental-api/css-theme-variables/overview": "Overview",
     "/material-ui/experimental-api/css-theme-variables/usage": "Usage",
     "/material-ui/experimental-api/css-theme-variables/customization": "Customization",
-    "/material-ui/experimental-api/css-theme-variables/migration": "Migrating to CSS theme variables",
+    "/material-ui/experimental-api/css-theme-variables/migration": "Migrating to CSS variables",
+    "/material-ui/experimental-api/css-variables": "TODO merge with other pages",
     "/material-ui/discover-more": "Discover more",
     "/material-ui/discover-more/showcase": "Showcase",
     "/material-ui/discover-more/related-projects": "Related projects",
