[system] Enable configuring the `sx` prop in the `theme` (#35150)

--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -193,6 +193,8 @@
     "/system/react-container": "Container",
     "/system/react-grid": "Grid",
     "/system/react-stack": "Stack",
+    "/system/experimental-api": "Experimental APIs",
+    "/system/experimental-api/configure-the-sx-prop": "Configure the sx prop",
     "/system/styles": "Styles",
     "/system/styles/basics": "Basics",
     "/system/styles/advanced": "Advanced",
