--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -227,7 +227,7 @@
     "/base/react-popper": "Popper",
     "/base/react-portal": "Portal",
     "/base/react-textarea-autosize": "Textarea Autosize",
-    "/base/guides": "How to guides",
+    "/base/guides": "How-to guides",
     "/base/guides/working-with-tailwind-css": "Working with Tailwind CSS",
     "/material-ui/getting-started": "Getting started",
     "/material-ui/getting-started/overview": "Overview",
@@ -324,7 +324,7 @@
     "/material-ui/customization/default-theme": "Default theme",
     "/material-ui/customization/how-to-customize": "How to customize",
     "/material-ui/customization/color": "Color",
-    "/material-ui/guides": "How to guides",
+    "/material-ui/guides": "How-to guides",
     "/material-ui/guides/understand-mui-packages": "Understand MUI packages",
     "/material-ui/guides/typescript": "TypeScript",
     "/material-ui/guides/interoperability": "Style library interoperability",
