--- a/docs/translations/api-docs/list/list-zh.json
+++ b/docs/translations/api-docs/list/list-zh.json
@@ -6,6 +6,7 @@
     "component": "The component used for the root node. Either a string to use a HTML element or a component.",
     "dense": "如果 <code>true</code>，为键盘和鼠标输入设计的紧凑垂直填充将用于列表和列表项。 因为 <code>dense</code> 上下文，后代组件可以使用prop。",
     "disablePadding": "如果 <code>true</code>, 垂直填充将从列表中删除。",
+    "divider": "Add an element between each child.",
     "subheader": "子标题的内容，通常是 <code>ListSubheader </code>。",
     "sx": "The system prop that allows defining system overrides as well as additional CSS styles. See the <a href=\"/system/getting-started/the-sx-prop/\">`sx` page</a> for more details."
   },
