[blog] 2022 in review and beyond

--- a/docs/pages/blog/2021.md
+++ b/docs/pages/blog/2021.md
@@ -23,9 +23,9 @@ Thank you for being part of this journey!
 It's only with your trust that we could achieve the following outcomes in 2021. Thank you!
 
 - 📦 From 6.4M to [10.8M](https://npm-stat.com/charts.html?package=%40material-ui%2Fcore&from=2019-11-30&to=2020-12-31) downloads per month (from 18% to [23%](https://docs.google.com/spreadsheets/d/1l5j3Xjtvm9XZtmb4ulLiWElQaXSlZlyCWT5ONrQMpBo/edit?usp=sharing) share of the React ecosystem).
-- 📈 From 4.6M to 6.0M unique visitors per year on the documentation.
+- 📈 From 4.6M to 5.96M unique visitors per year on the documentation.
 - ⭐️ From 63.8 to 74.0k stars, leave us [yours 🌟](https://github.com/mui/material-ui).
-- 👨‍👩‍👧‍👦 From 2,052 to [2,396](https://github.com/mui/material-ui/graphs/contributors) contributors.
+- 👨‍👩‍👧‍👦 From 2,052 to [2,396](https://github.com/mui/material-ui/graphs/contributors) contributors, +344.
 - 💰 Grew financial support by 2.9X in 2021, compared to 2020.
 - 🏢 From 6 to 14 full-time equivalent [team members](/about/).
 
