--- a/docs/translations/api-docs/use-button/use-button.json
+++ b/docs/translations/api-docs/use-button/use-button.json
@@ -1,1 +1,8 @@
-{ "hookDescription": "", "inputParamsDescriptions": {} }
+{
+  "hookDescription": "",
+  "inputParamsDescriptions": {
+    "disabled": "If `true`, the component is disabled.",
+    "focusableWhenDisabled": "If `true`, allows a disabled button to receive focus.",
+    "type": "Type attribute applied when the `component` is `button`."
+  }
+}
