--- a/docs/translations/api-docs/use-tabs-list/use-tabs-list.json
+++ b/docs/translations/api-docs/use-tabs-list/use-tabs-list.json
@@ -1,1 +1,4 @@
-{ "hookDescription": "", "inputParamsDescriptions": {} }
+{
+  "hookDescription": "",
+  "inputParamsDescriptions": { "children": "The content of the component." }
+}
