--- a/docs/translations/api-docs/use-switch/use-switch.json
+++ b/docs/translations/api-docs/use-switch/use-switch.json
@@ -1,4 +1,11 @@
 {
   "hookDescription": "The basic building block for creating custom switches.\n\nDemos:\n\n- [Switches](https://mui.com/components/switches/)",
-  "inputParamsDescriptions": {}
+  "inputParamsDescriptions": {
+    "checked": "If `true`, the component is checked.",
+    "defaultChecked": "The default checked state. Use when the component is not controlled.",
+    "disabled": "If `true`, the component is disabled.",
+    "onChange": "Callback fired when the state is changed.",
+    "readOnly": "If `true`, the component is read only.",
+    "required": "If `true`, the `input` element is required."
+  }
 }
