--- a/docs/translations/api-docs/use-tab/use-tab.json
+++ b/docs/translations/api-docs/use-tab/use-tab.json
@@ -1,1 +1,7 @@
-{ "hookDescription": "", "inputParamsDescriptions": {} }
+{
+  "hookDescription": "",
+  "inputParamsDescriptions": {
+    "onChange": "Callback invoked when new value is being set.",
+    "value": "You can provide your own value. Otherwise, we fall back to the child position index."
+  }
+}
