--- a/docs/translations/api-docs/use-tabs/use-tabs.json
+++ b/docs/translations/api-docs/use-tabs/use-tabs.json
@@ -1,1 +1,11 @@
-{ "hookDescription": "", "inputParamsDescriptions": {} }
+{
+  "hookDescription": "",
+  "inputParamsDescriptions": {
+    "defaultValue": "The default value. Use when the component is not controlled.",
+    "direction": "The direction of the text.",
+    "onChange": "Callback invoked when new value is being set.",
+    "orientation": "The component orientation (layout flow direction).",
+    "selectionFollowsFocus": "If `true` the selected tab changes on focus. Otherwise it only\nchanges on activation.",
+    "value": "The value of the currently selected `Tab`.\nIf you don't want any selected `Tab`, you can set this prop to `false`."
+  }
+}
