--- a/docs/translations/api-docs/use-controllable-reducer/use-controllable-reducer.json
+++ b/docs/translations/api-docs/use-controllable-reducer/use-controllable-reducer.json
@@ -1,1 +1,1 @@
-{ "hookDescription": "", "inputParamsDescriptions": {} }
+{ "hookDescription": "", "inputParamsDescriptions": {}, "returnValueDescriptions": {} }
