--- a/docs/translations/api-docs/use-snackbar/use-snackbar.json
+++ b/docs/translations/api-docs/use-snackbar/use-snackbar.json
@@ -6,5 +6,6 @@
     "onClose": "Callback fired when the component requests to be closed.\nTypically `onClose` is used to set state in the parent component,\nwhich is used to control the `Snackbar` `open` prop.\nThe `reason` parameter can optionally be used to control the response to `onClose`,\nfor example ignoring `clickaway`.",
     "open": "If `true`, the component is shown.",
     "resumeHideDuration": "The number of milliseconds to wait before dismissing after user interaction.\nIf `autoHideDuration` prop isn't specified, it does nothing.\nIf `autoHideDuration` prop is specified but `resumeHideDuration` isn't,\nwe default to `autoHideDuration / 2` ms."
-  }
+  },
+  "returnValueDescriptions": {}
 }
