--- a/docs/translations/api-docs/use-button/use-button.json
+++ b/docs/translations/api-docs/use-button/use-button.json
@@ -4,5 +4,12 @@
     "disabled": "If `true`, the component is disabled.",
     "focusableWhenDisabled": "If `true`, allows a disabled button to receive focus.",
     "type": "Type attribute applied when the `component` is `button`."
+  },
+  "returnValueDescriptions": {
+    "active": "If `true`, the component is active (pressed).",
+    "disabled": "If `true`, the component is disabled.",
+    "focusVisible": "If `true`, the component is being focused using keyboard.",
+    "getRootProps": "Resolver for the root slot's props.",
+    "setFocusVisible": "Callback for setting the `focusVisible` param."
   }
 }
