--- a/docs/translations/api-docs/use-input/use-input.json
+++ b/docs/translations/api-docs/use-input/use-input.json
@@ -5,5 +5,6 @@
     "disabled": "If `true`, the component is disabled.\nThe prop defaults to the value (`false`) inherited from the parent FormControl component.",
     "error": "If `true`, the `input` will indicate an error by setting the `aria-invalid` attribute.\nThe prop defaults to the value (`false`) inherited from the parent FormControl component.",
     "required": "If `true`, the `input` element is required.\nThe prop defaults to the value (`false`) inherited from the parent FormControl component."
-  }
+  },
+  "returnValueDescriptions": {}
 }
