--- a/docs/translations/api-docs/use-menu-item/use-menu-item.json
+++ b/docs/translations/api-docs/use-menu-item/use-menu-item.json
@@ -1,1 +1,1 @@
-{ "hookDescription": "", "inputParamsDescriptions": {} }
+{ "hookDescription": "", "inputParamsDescriptions": {}, "returnValueDescriptions": {} }
