--- a/docs/translations/api-docs/use-switch/use-switch.json
+++ b/docs/translations/api-docs/use-switch/use-switch.json
@@ -7,5 +7,6 @@
     "onChange": "Callback fired when the state is changed.",
     "readOnly": "If `true`, the component is read only.",
     "required": "If `true`, the `input` element is required."
-  }
+  },
+  "returnValueDescriptions": {}
 }
