--- a/docs/translations/api-docs/use-tab-panel/use-tab-panel.json
+++ b/docs/translations/api-docs/use-tab-panel/use-tab-panel.json
@@ -1,1 +1,1 @@
-{ "hookDescription": "", "inputParamsDescriptions": {} }
+{ "hookDescription": "", "inputParamsDescriptions": {}, "returnValueDescriptions": {} }
