Renamed inputParams to parameters, renamed returnValue hash to return-value

--- a/docs/translations/api-docs/use-badge/use-badge.json
+++ b/docs/translations/api-docs/use-badge/use-badge.json
@@ -1,1 +1,1 @@
-{ "hookDescription": "", "inputParamsDescriptions": {}, "returnValueDescriptions": {} }
+{ "hookDescription": "", "parametersDescriptions": {}, "returnValueDescriptions": {} }
