--- a/docs/translations/api-docs/use-tabs-list/use-tabs-list.json
+++ b/docs/translations/api-docs/use-tabs-list/use-tabs-list.json
@@ -1,5 +1,5 @@
 {
   "hookDescription": "",
-  "inputParamsDescriptions": { "children": "The content of the component." },
+  "parametersDescriptions": { "children": "The content of the component." },
   "returnValueDescriptions": {}
 }
