--- a/docs/translations/api-docs/use-autocomplete/use-autocomplete.json
+++ b/docs/translations/api-docs/use-autocomplete/use-autocomplete.json
@@ -1,6 +1,6 @@
 {
   "hookDescription": "",
-  "inputParamsDescriptions": {
+  "parametersDescriptions": {
     "autoComplete": "If `true`, the portion of the selected suggestion that has not been typed by the user,\nknown as the completion string, appears inline after the input cursor in the textbox.\nThe inline completion string is visually highlighted and has a selected state.",
     "autoHighlight": "If `true`, the first option is automatically highlighted.",
     "autoSelect": "If `true`, the selected option becomes the value of the input\nwhen the Autocomplete loses focus unless the user chooses\na different option or changes the character string in the input.",
