--- a/docs/translations/api-docs/use-form-control-unstyled-context/use-form-control-unstyled-context.json
+++ b/docs/translations/api-docs/use-form-control-unstyled-context/use-form-control-unstyled-context.json
@@ -1,1 +1,1 @@
-{ "hookDescription": "", "inputParamsDescriptions": {}, "returnValueDescriptions": {} }
+{ "hookDescription": "", "parametersDescriptions": {}, "returnValueDescriptions": {} }
