--- a/docs/translations/api-docs/use-input/use-input.json
+++ b/docs/translations/api-docs/use-input/use-input.json
@@ -1,6 +1,6 @@
 {
   "hookDescription": "",
-  "inputParamsDescriptions": {
+  "parametersDescriptions": {
     "defaultValue": "The default value. Use when the component is not controlled.",
     "disabled": "If `true`, the component is disabled.\nThe prop defaults to the value (`false`) inherited from the parent FormControl component.",
     "error": "If `true`, the `input` will indicate an error by setting the `aria-invalid` attribute.\nThe prop defaults to the value (`false`) inherited from the parent FormControl component.",
