--- a/docs/translations/api-docs/use-select/use-select.json
+++ b/docs/translations/api-docs/use-select/use-select.json
@@ -1,1 +1,1 @@
-{ "hookDescription": "", "inputParamsDescriptions": {}, "returnValueDescriptions": {} }
+{ "hookDescription": "", "parametersDescriptions": {}, "returnValueDescriptions": {} }
