--- a/docs/translations/api-docs/use-slider/use-slider.json
+++ b/docs/translations/api-docs/use-slider/use-slider.json
@@ -1,1 +1,1 @@
-{ "hookDescription": "", "inputParamsDescriptions": {}, "returnValueDescriptions": {} }
+{ "hookDescription": "", "parametersDescriptions": {}, "returnValueDescriptions": {} }
